--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.js linguist-language=HTML
-*.css linguist-language=HTML
-*.html linguist-language=HTML
+*.h linguist-language=swift
+*.m linguist-language=swift
