--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.js linguist-language=html 
 *.css linguist-language=html
-*.js linguist-language=html
+*.html linguist-language=html  
+*.java linguist-language=html 
